--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,16 +15,20 @@
         <main>
             <section class="horoscope">
                 <h1>Horoscopes</h1>
-                <nav>
-                    <ul>
-                        <% horoscopes.forEach(horoscope => { %>
-                            <li><a href="/horoscope/<%= horoscope.sign.toLowerCase() %>"><%= horoscope.sign %></a></li>
-                        <% }) %>
-                    </ul>
-                </nav>
+                <div class="card-container">
+                    <% horoscopes.forEach(horoscope => { %>
+                        <div class="card">
+                            <a href="/horoscope/<%= horoscope.sign.toLowerCase() %>">
+                                <img src="/images/signs/<%= horoscope.image %>" alt="<%= horoscope.sign %> sign" class="card-image">
+                                <h2 class="card-title"><%= horoscope.sign %></h2>
+                                <p class="card-date-range"><%= horoscope.dateRange %></p>
+                            </a>
+                        </div>
+                    <% }) %>
+                </div>
             </section>
         </main>
-        <footer>
+        <footer style="margin-top: 50px;">
             <div class="social-media">
                 <a href="#"><img src="/images/fb.png" alt="Facebook"></a>
                 <a href="#"><img src="/images/ig.png" alt="Instagram"></a>
