--- a/public/styles.css
+++ b/public/styles.css
@@ -59,6 +59,8 @@ h1 {
     font-size: 1rem;
     margin-top: 50px;
     margin-bottom: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .spotify {
@@ -66,16 +68,21 @@ h1 {
     justify-content: center;
     gap: 10px;
     margin: 20px 0;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .compatibility {
     font-size: 1rem;
     margin-top: 50px;
     margin-bottom: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 footer {
-    margin-bottom: 20px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 .social-media a {
