--- a/views/horoscope.ejs
+++ b/views/horoscope.ejs
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= horoscope.sign %> Horoscope</title>
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/card.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
     <div class="container">
         <header>
-            <div class="logo"><img src="/images/logo.png" alt="Astra logo"></div>
+            <div class="logo"><a href="/"><img src="/images/logo.png" alt="Astra logo"></a></div>
         </header>
         <main>
             <section class="horoscope" id="horoscope-section">
@@ -18,9 +19,78 @@
                 <h1 id="sign-name"><%= horoscope.sign %></h1>
                 <h3 class="date-range" id="date-range"><%= horoscope.dateRange %></h3>
 
-                <div class="horoscope-message">
+                <!-- <div class="horoscope-message">
                     <p>Horoscope</p>
-                </div>
+                </div> -->
+
+                <!-- Trial Card -->
+
+                <div class="nft">
+                    <div class='main'>
+                        <img class='tokenImage' src="/images/card_signs/<%= horoscope.image %>" alt="NFT" />
+                        <h2><%= horoscope.sign %></h2>
+                        <p class='description' style="text-align: justify; margin-bottom: 20px;"><%= horoscope.details.description %></p>
+
+                        <hr />
+
+                        <div class='tokenInfo'>
+
+                            <table style="text-align: left;">
+                                <tr>
+                                    <td class="price">
+                                        <p>Mood</p>
+                                    </td>
+                                    <td class="duration">
+                                        <p><%= horoscope.details.mood %></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="price">
+                                        <p>Color</p>
+                                    </td>
+                                    <td class="duration">
+                                        <p><%= horoscope.details.color %></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="price">
+                                        <p>Lucky Number</p>
+                                    </td>
+                                    <td class="duration">
+                                        <p><%= horoscope.details.luckyNumber %></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="price">
+                                        <p>Lucky Time</p>
+                                    </td>
+                                    <td class="duration">
+                                        <p><%= horoscope.details.luckyTime %></p>
+                                    </td>
+                                </tr>
+                            </table>
+
+                            <hr style="margin-top: 10px;"/>
+
+                            <div class="comp">
+                                <p style="margin-bottom: 5px;">Most compatible with:</p>
+                            </div>
+                            <div class="people">
+                                <p style="margin: 0"><%= horoscope.compatibility %></p>
+                            </div>
+
+                      </div>
+                      
+                      <!-- <div class='creator'>
+                        <div class='wrapper'>
+                          <img src="https://images.unsplash.com/photo-1620121692029-d088224ddc74?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80" alt="Creator" />
+                        </div>
+                        <p><ins>Creation of</ins> Kiberbash</p>
+                      </div> -->
+                    </div>
+                  </div>
+
+                <!-- ------------------------ -->
 
                 <p class="daily-message" id="daily-message"><%= horoscope.dailyMessage %></p>
                 
@@ -28,7 +98,7 @@
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX7cvHpkIJFt2?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
 
-                <p class="compatibility" id="compatibility">Most compatible with: <%= horoscope.compatibility %></p>
+                <!-- <p class="compatibility" id="compatibility">Most compatible with: <%= horoscope.compatibility %></p> -->
             </section>
         </main>
         <footer>
